[INTERNAL] ui.Table: Fix position of vertical scrollbar for iOS

--- a/src/sap.ui.table/src/sap/ui/table/themes/base/ScrollingIOS.less
+++ b/src/sap.ui.table/src/sap/ui/table/themes/base/ScrollingIOS.less
@@ -6,6 +6,7 @@
 .sapUiTableVSbIOS {
 	position: absolute;
 	width: 100%;
+	bottom: 0;
 	z-index: 5;
 
 	.sapUiTableVSbIOSThumb {
